:scissors: refactor: remove email link

--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "someone@example.com"
+#  email: "someone@example.com"
   #facebook: daattali
   github: anoff
   twitter: an0xff
