--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ google_analytics: "UA-93890295-4"
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-disqus: "anoff-io"
+# disqus: "anoff-io"
 
 # Facebook App ID
 # fb_app_id: ""
