--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: anoff's blog
+title: blog.anoff.io
 
 # Short description of your site
 # description: Join me in my adventures as a Software Developer
