:star2: feat: add asciidoctor admonition via icons

--- a/_config.yml
+++ b/_config.yml
@@ -165,9 +165,10 @@ asciidoc:
 asciidoctor:
   safe: unsafe
   attributes:
-    imagesdir: /img/assets/
-    idseparator: _
-    source-highlighter: coderay
+    - imagesdir=/img/assets/
+    - idseparator=_
+    - source-highlighter=coderay
+    - icons=font
 keep_files:
   - images
   - /img/assets
