--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ disqusShortname = "anoff-io"
   # Files are relative to the static/ directory or a URL.
   # Files are imported in the order they appear here, after
   # theme.css and theme.js, respectively.
-  css_modules = ["adoc.css"]
+  css_modules = ["adoc.css", "overwrites.css"]
   js_modules = ["fix-adoc.js"]
 
   # Description and meta data for the search engines
@@ -127,6 +127,11 @@ disqusShortname = "anoff-io"
     copyrightUrl = "//anoff.io"
     creditsText = "Bilberry Hugo Theme"
     creditsUrl = "//github.com/Lednerb/bilberry-hugo-theme"
+
+[permalinks]
+    code = "/:filename"
+    article = "/:filename"
+    book = "/:filename"
 
 # don't change anything below
 [taxonomies]
