--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 title = "Andreas' Blog"
 # Add an trailing slash to ensure that all fonts render correctly.
 baseURL = "//blog.anoff.io/"
-theme = "bilberry-hugo-theme"
+theme = "bilberry-hugo-theme-fork"
 
 enableRobotsTXT = true
 
