--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,9 @@ steps:
 - name: build
   image: anoff/hugo-asciidoctor
   commands:
-  - hugo --gc --minify -d _site
+  - hugo --gc --minify -d _site --baseURL //blog-gh.anoff.io
+  - touch _site/.nojekyll
+  - echo "blog-gh.anoff.io" > _site/CNAME
 - name: publish  
   image: plugins/gh-pages
   settings:
