:ant: fix: twitter handle

--- a/config.toml
+++ b/config.toml
@@ -108,7 +108,7 @@ disqusShortname = "anoff-io"
     # social media profile urls for the footer links
     showSocialMedia = true
 
-    twitter    = "//twitter.com/an0xff"
+    twitter    = "//twitter.com/anoff_io"
     pinterest  = ""
     instagram  = ""
     tumblr     = ""
