:construction_worker: build: publish via script

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -8,7 +8,7 @@ trigger:
 
 variables:
 - group: integration
-
+- name: 
 pool:
   vmImage: 'windows-2019'
 
@@ -32,12 +32,14 @@ steps:
     artifactName: 'blog'
     targetPath: '$(Build.ArtifactStagingDirectory)'
 
-- task: GitHubPagesPublish@1
+- script: |
+    git clone https://anoff:$(github_token)@github.com/anoff/blog.git --branch=gh-test $(System.DefaultWorkingDirectory)/ghpages
+    cp -R '$(Build.ArtifactStagingDirectory)' $(System.DefaultWorkingDirectory)/ghpages
+    cd $(System.DefaultWorkingDirectory)/ghpages
+    git config core.autocrlf false
+    git config user.email ci@anoff.io
+    git config user.name "CI Joe"
+    git add *
+    git commit --allow-empty -m "Automated build $(Build.BuildId)"
+    git push
   displayName: 'Publish to gh-pages'
-  inputs:
-    docPath: '$(Build.ArtifactStagingDirectory)'
-    githubusername: 'anoff'
-    githubaccesstoken: '$(github_token)'
-    repositoryname: 'blog'
-    branchname: 'gh-test'
-    
