--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -41,5 +41,7 @@ steps:
       git config core.autocrlf false
       git config user.email ci@anoff.io
       git config user.name "CI Joe"
-      npx gh-pages --dist '$(Build.ArtifactStagingDirectory)' --dotfiles --branch gh-test --repo https://anoff:$(github_token)@github.com/anoff/blog.git
+      echo "artifact at  $(Build.ArtifactStagingDirectory)"
+      ls -ahl $(Build.ArtifactStagingDirectory)
+      npx gh-pages --dist "$(Build.ArtifactStagingDirectory)" --dotfiles --branch gh-test --repo https://anoff:$(github_token)@github.com/anoff/blog.git
   displayName: 'Publish to gh-pages'
