--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -41,7 +41,8 @@ steps:
       git config core.autocrlf false
       git config user.email ci@anoff.io
       git config user.name "CI Joe"
+      ls -ahl /d/a
       echo "artifact at  $(Build.ArtifactStagingDirectory)"
-      ls -ahl $(Build.ArtifactStagingDirectory)
+      ls -ahl /d/a/1/a
       npx gh-pages --dist "$(Build.ArtifactStagingDirectory)" --dotfiles --branch gh-test --repo https://anoff:$(github_token)@github.com/anoff/blog.git
   displayName: 'Publish to gh-pages'
