--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -46,7 +46,7 @@ steps:
       git config user.email ci@anoff.io
       git config user.name "CI Joe"
       rm -rf *
-      cp -R dist/* .
+      cp -R /d/a/1/s/dist/* .
       git add .
       git commit --allow-empty -m "Automated build $(Build.BuildId)"
       git push
