--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -4,7 +4,7 @@
 #     https://marketplace.visualstudio.com/items?itemName=AccidentalFish.githubpages-publish
 
 trigger:
-- pipelines
+- master
 
 variables:
 - group: integration
