--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -14,11 +14,13 @@ steps:
 - task: Bash@3
   displayName: 'Hotfix theme'
   inputs:
+    targetType: 'inline'
     script: cp -R theme_fixes/** themes/bilberry-hugo-theme
 
 - task: Bash@3
   displayName: 'Build HTML'
   inputs:
+    targetType: 'inline'
     script: |
       docker run --rm -v $PWD:/app anoff/hugo-asciidoctor hugo --gc --minify -d _site
       cp -R _site/* $(Build.ArtifactStagingDirectory)/
@@ -31,6 +33,7 @@ steps:
 
 - task: Bash@3
   inputs:
+    targetType: 'inline'
     script: |
       git clone https://anoff:$(github_token)@github.com/anoff/blog.git --branch=gh-pages ./ghpages
       cd ./ghpages
