--- a/.github/workflows/push-deploy.yml
+++ b/.github/workflows/push-deploy.yml
@@ -14,6 +14,9 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
+      with:
+        persist-credentials: false
+        submodules: true
     - uses: actions/setup-node@v1
       with:
         node-version: 12
