--- a/config.toml
+++ b/config.toml
@@ -60,7 +60,7 @@ disqusShortname = "anoff-io"
     subtitle = "Adventures of a software engineer/architect"
 
     # if you want to use gravatar for the header image
-    gravatarEMail = ""
+    gravatarEMail = "offenhaeuser@gmail.com"
 
     # set an path to the image file you want to use | overwrites gravatar
     customImage = "/avatar.png"
